package items;

public class Gold extends Item {
    public Gold() {
        super("Gold");
    }
}
