package items;

public abstract class Item {
    private String name;

    public Item(String name) {
    }

    public String getName() {
        return name;
    }
}
